# prwaf_geirfa

./: main.py  pyproject.toml
.github/workflows/: CI.yml
tests/: __init__.py  _items.py  test_make_pseudo_words.py
utils/: word_utils.py
