[tool.poetry]
name = "prawf-geirfa"
version = "0.1.2"
description = ""
authors = ["Alan Kersaudy <alan.kersaudy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
